--- a/themes/meme/assets/scss/_common/_page/home-poetry.scss
+++ b/themes/meme/assets/scss/_common/_page/home-poetry.scss
@@ -14,11 +14,14 @@
         right: 5%;
         font-size: 1.5em;
     }
-    .life {
-        color: #f37055;
+    .course {
+        color: #fb743e;
     }
-    .tech {
-        color: #a166ab;
+    .research {
+        color: #ec4646;
+    }
+    .tags {
+        color: #3282b8;
     }
     .about {
         color: #07b39b;
